# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors =  ["João Loureiro"]
name = "quick-serve"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/joaofl/quick-serve"
homepage = "https://github.com/joaofl/quick-serve"
description = "Quick Serve: A zero-config, multi-platform, multi-protocol standalone server for prompt file serving, with or without GUI."
categories = ["command-line-utilities", "development-tools"]

[features]
ui = ["dep:egui", "dep:eframe", "dep:rfd"]
default = ["ui"]

[[bin]]
name = "quick-serve-gui"
path = "src/main_gui.rs"
required-features = ["ui"]

[[bin]]
name = "quick-serve"
path = "src/main_cli.rs"

[dependencies]
# Tokio async runtime with only required features
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal", "io-util", "fs"]}
async-trait = "0.1.89"

# FTP server deps
libunftp = "0.21.0"
unftp-sbe-fs = "0.3.0"

# TFTP server
async-tftp = "0.3.6"

# HTTP server deps
hyper = { version = "1.7.0", features = ["server", "http1"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["tokio", "server", "server-auto"] }
bytes = "1.10.1"

# DHCP server deps
dhcp4r = "0.2.3"

# Log related
log = "0.4.28"

# For the headless version
clap = { version = "4.5.50", features = ["derive", "string"] }
ctrlc = "3.5.0"
sha2 = "0.10.9"

# For the gui version
egui = {version = "0.33.0", optional = true}
eframe = {version = "0.33.0", features = ["wayland"], optional = true}
rfd = {version = "0.15.4", optional = true}

[dev-dependencies]

testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["blocking"] }

sha2 = "0.10.9"
tempfile = "3.23.0"
rand = "0.9.2"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Link time optimizations
panic = "abort" # Saves binary size on removing backtrace data on panic

